# jamproject

./: README.rst  README_ja.rst  pyproject.toml  setup.cfg
.github/workflows/: cd.yml  ci.yml
docs/: Makefile  cli.rst  command.rst  conf.py  index.rst
docs/api/: index.rst  jamproject.cli.rst  jamproject.core.base.rst  jamproject.core.readers.rst  jamproject.core.rst  jamproject.core.transforms.rst  jamproject.rst  motto.cli.rst  motto.config.rst  motto.core.base.rst  motto.core.config.rst  motto.core.loaders.rst  motto.core.path.rst  motto.core.readers.rst  motto.core.rst  motto.core.tokenizers.rst  motto.core.transforms.rst  motto.core.writers.rst  motto.readers.rst  motto.rst  motto.skill.rst  motto.skills.reporting.rst  motto.skills.rst  motto.skills.sentence_length.rst  motto.tokenizers.rst  motto.transforms.rst  motto.utils.path.rst  motto.utils.rst  motto.writers.rst
motto/: cli.py
motto/skills/: reporting.py  sentence_length.py
src/jamproject/: __init__.py  cli.py  config.py  transforms.py
src/jamproject/core/: __init__.py  base.py  config.py  default.cfg  loaders.py  readers.py  transforms.py  writers.py
src/jamproject/skills/: __init__.py  reporting.py  sentence_length.py
src/motto/: cli.py  config.py  core.py  readers.py  skill.py  tokenizers.py  transforms.py
src/motto/core/: __init__.py  base.py  path.py  tokenizers.py  transforms.py
src/motto/skills/: sentence_length.py
tests/: test_cli.py  test_config.py  test_jamproject.py  test_motto.py  test_readers.py  test_skill.py  test_tokenizers.py  test_tokens.py
tests/test_config/: .jamproject.ini  has-skill.cfg  no-config.cfg  setup.cfg
tests/test_core/: test_config.py  test_path.py  test_readers.py  test_skill.py  test_tokenizers.py  test_transdorms.py
tests/test_core/test_config/: has-skill.cfg  no-config.cfg
tests/test_skills/: test_sentence_length.py
tests/test_utils/: test_path.py
