[tool.poetry]
name = "jamproject"
version = "0.1.0"
description = "Japanese document Analytics Machine"
authors = ["Kazuya Takei <attakei@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
docutils = "^0.15.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.750"
pytest = "^5.3.2"
pytest-pythonpath = "^0.7.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
