[tool.poetry]
name = "jamproject"
version = "0.1.0"
description = "Japanese document Analytics Machine"
authors = ["Kazuya Takei <attakei@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6 || ^3.7 || ^3.8"
docutils = "^0.15.2"
click = "^7.0"
janome = "^0.3.10"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.750"
pytest = "^5.3.2"
pytest-pythonpath = "^0.7.3"
sphinx = "^2.3.0"
doc8 = "^0.8.0"

[tool.poetry.scripts]
jam = "jamproject:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
