[tool.poetry]
name = "motto"
version = "0.1.1"
description = "Japanese sentence linter platform for reStructuredText"
authors = ["Kazuya Takei <attakei@gmail.com>"]
license = "Apache-2.0"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.6 || ^3.7 || ^3.8"
docutils = "*"
click = "*"
janome = "*"
typing-extensions = "*"
click-default-group = "*"
dataclasses = {version = "*", python = ">=3.6,<3.7"}
sphinx = {version = "*", optional = true}

[tool.poetry.extras]
sphinx = ["sphinx"]


[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.750"
pytest = "^5.3.2"
pytest-pythonpath = "^0.7.3"
doc8 = "^0.8.0"
bumpversion = "^0.5.3"

[tool.poetry.scripts]
motto = "motto.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
